--- a/pre-loaders/spinner/css/style.css
+++ b/pre-loaders/spinner/css/style.css
@@ -39,8 +39,8 @@
 	position: absolute;
 	height: 85px;
 	width: 85px;
-	background: #eee;
-	border-left:20px solid grey;
+	background: grey;
+	border-left: 25px solid #eee;
 	border-radius: 50%;
 	animation: spinners 5s linear infinite alternate;
 }
@@ -58,8 +58,7 @@
 
 @keyframes spinners {
 	0%{
-		transform: rotate(0deg);
-		/*border-left: 20px dotted grey;*/
+		transform: scale(0.5, 0.5);
 	}
 	100% {
 		background: transparent;
