--- a/pre-loaders/spinner/css/style.css
+++ b/pre-loaders/spinner/css/style.css
@@ -9,7 +9,8 @@
 	top:0;
 	width:100%;
 	height: 100vh;
-	background:#77b3d4;
+	background-image:linear-gradient(to right, rgba(100, 88,220,.4), rgba(20,68,200,.7)),url(../img/background.jpg);
+	/*background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);*/
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -48,7 +49,7 @@
 	transform: skew(-50deg, -10deg);
 }
 .loading {
-	color:#000;
+	color:#fff;
 	font-family: sans-serif;
 	z-index: 1;
 }
@@ -86,14 +87,13 @@
 	50% {
 		border:none;
 		transform: rotate(-1440deg);
-		background: linear-gradient(to right, black, white );
-		opacity: 0.4;
+		background: radial-gradient(white,red);
+		opacity: 0.5;
 	}
 	100% {
 		transform: scale(0.6,.6);
 		background: red;
 		opacity: 0.4;
-
 	}
 }
  @keyframes spears {
